// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageTimeBox component Styled: Should Render expected Styles when position is left 1`] = `
.c0 {
  max-width: 80px;
  text-align: right;
  color: rgba(0,0,0,0.38);
  font-size: calc(12 * 1px);
  line-height: calc(16 * 1px);
  font-weight: 500;
  float: right;
  position: absolute;
  bottom: 0;
  right: 0;
}

.c1 {
  font-size: calc(10 * 1px);
}

.c2 {
  margin-left: 3px;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    4 days ago
  </span>
  <span
    className="c2"
  >
    <svg
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 40 40"
      width="1em"
    >
      <g>
        <path
          d="m30.3 10.9l-10.9 10.9-2.4-2.4 10.9-10.9z m7.3-2.4l2.4 2.4-20.6 20.6-9.6-9.6 2.4-2.4 7.2 7.1z m-37.6 13.4l2.5-2.4 9.5 9.6-2.4 2.4z"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`MessageTimeBox component should render a Text Message and contain the Text and status 1`] = `
<StyledMessageTimeBoxContainer>
  <StyledTimeAgoText>
    4 days ago
  </StyledTimeAgoText>
  <StyledStatusSpan>
    <MdAccessTime />
  </StyledStatusSpan>
</StyledMessageTimeBoxContainer>
`;

exports[`MessageTimeBox component should render a Text Message and contain the Text and status 2`] = `
<StyledMessageTimeBoxContainer>
  <StyledTimeAgoText>
    4 days ago
  </StyledTimeAgoText>
  <StyledStatusSpan>
    <IoAndroidDoneAll />
  </StyledStatusSpan>
</StyledMessageTimeBoxContainer>
`;
